--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/text_View1"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:text="@string/helloWorld"
@@ -17,5 +18,35 @@
         android:textColor="#F10606"
         android:fontFamily="serif"
          />
+
+    <EditText
+        android:id="@+id/editText_equal1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        />
+    <EditText
+        android:id="@+id/editText_equal2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="number"/>
+    <Button
+        android:id="@+id/button_for_equals"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Equality"
+        />
+    <TextView
+        android:id="@+id/textView_for_equals"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:text="@string/answer"
+        android:fontFamily="cursive"
+        android:textColor="#278E2B"
+        android:gravity="center"
+        />
+
+
 
 </LinearLayout>
