--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,6 +67,29 @@
         android:gravity="center"/>
 
 
+    <CheckBox
+        android:id="@+id/name_chekBox1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:text="@string/yes"
+        android:textColor="#9C27B0"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="15dp"/>
+
+    <CheckBox
+        android:id="@+id/name_chekBox2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:text="@string/no"
+        android:textColor="#FFC107"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="15dp"/>
+
+
+
+
 
 
 
