--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,51 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/text_View1"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:text="@string/helloWorld"
         android:background="#0037FF"
-        android:textSize="30sp"
-        android:gravity="center"
-        android:textColor="#F10606"
         android:fontFamily="serif"
-         />
+        android:gravity="center"
+        android:text="@string/helloWorld"
+        android:textColor="#F10606"
+        android:textSize="30sp" />
 
     <EditText
         android:id="@+id/editText_equal1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        />
+        android:inputType="number" />
+
     <EditText
         android:id="@+id/editText_equal2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="number"/>
+        android:inputType="number" />
+
     <Button
         android:id="@+id/button_for_equals"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/Equality"
-        />
+        android:text="@string/Equality" />
+
     <TextView
         android:id="@+id/textView_for_equals"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
-        android:text="@string/answer"
         android:fontFamily="cursive"
-        android:textColor="#278E2B"
         android:gravity="center"
-        />
+        android:text="@string/answer"
+        android:textColor="#278E2B"
+        android:textSize="25sp" />
 
     <Switch
         android:id="@+id/name_switch"
@@ -60,37 +58,50 @@
         android:id="@+id/textView_for_switch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
-        android:text=""
         android:fontFamily="serif"
+        android:gravity="center"
+        android:text=""
         android:textColor="#CDDC39"
-        android:gravity="center"/>
-
+        android:textSize="25sp" />
 
     <CheckBox
         android:id="@+id/name_chekBox1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
         android:text="@string/yes"
         android:textColor="#9C27B0"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="15dp"/>
+        android:textSize="15sp" />
 
     <CheckBox
         android:id="@+id/name_chekBox2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
         android:text="@string/no"
         android:textColor="#FFC107"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="15dp"/>
+        android:textSize="15sp" />
 
+    <ToggleButton
+        android:id="@+id/name_toggleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:nestedScrollingEnabled="true"
+        android:textColor="#F13E06"
+        android:textSize="25sp"
+        android:textStyle="italic" />
 
-
-
-
+    <TextView
+        android:id="@+id/textView_for_toggleButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text=""
+        android:textColor="#80364F"
+        android:textSize="25sp"
+        android:textStyle="bold" />
 
 
 </LinearLayout>
